--- a/Leaflet-Step-1/static/css/style.css
+++ b/Leaflet-Step-1/static/css/style.css
@@ -3,8 +3,10 @@ body {
   margin: 0;
 }
 
-#map,
-body,
-html {
-  height: 100%;
+#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+#menu {
+position: absolute;
+background: #fff;
+padding: 10px;
+font-family: 'Open Sans', sans-serif;
 }
